--- a/01-custom-sequence-generator/src/main/resources/application.properties
+++ b/01-custom-sequence-generator/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=01-custom-sequence-generator
+server.port=8091
 
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=spring_cloud_demo
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
